@@ -2,7 +2,13 @@
 	* common/buildrec.c, common/map.h, common/map_query.c: Disallow the
 	building of a road during setup phase when the settlement cannot be
 	built.
-
+	* common/network.c, meta-server/gnocatan-meta-server.c: Minimal system
+	include files.
+	* server/buildutil.c, server/develop.c, server/discard.c,
+	server/gold.c, server/meta.c, server/player.c, server/pregame.c,
+	server/resource.c, server/robber.c, server/server.c, server/trade.c,
+	server/turn.c: Minimal list of include files.
+	
 2004-12-25  0.8.1.47  Etan Reisner <deryni@eden.rutgers.edu>
 	* server/gtk/gnocatan-server-gtk.c, client/gtk/gui.c: Replaced GNOME
 	about dialog with Gtk code.
